chore: upgraded tests to run